<resources>
    <string name="app_name">GirlScript Summit</string>
    <string name="title">Girlscript</string>
    <string name="participate">Participant</string>
    <string name="volunteer">Volunteer</string>
    <string name="on21">21 on 21 Awards</string>
    <string name="women">Women World Record</string>
    <string name="title_activity_participant">ParticipantActivity</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="city">City:</string>
    <string name="college_organization">College/Organization:</string>
    <string name="mobiile_no">Mobile No. : (Active Whatsapp)</string>
    <string name="email_id">Email-id:</string>
    <string name="q1_prtpnt">What are you expecting from GirlScript India Summit?</string>
    <string name="q2_prtpnt">What all events have you attended earlier or organised (if any)?</string>
    <string name="tech_skills">Rate your Technical Skills :</string>
    <string name="leadership_skills">Rate your Leadership Skills :</string>
    <string name="altitude">Where do you see yourself in next 5 years?</string>
    <string name="will_you_join">Will you join us on these dates?</string>
    <string name="btn_register">Register</string>
    <string name="apply">Apply</string>
    <string name="maybe">Maybe</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="title_activity_volunteer">VolunteerActivity</string>
    <string name="volunteership">We are looking for volunteers for the most happening summit around the nation.
Girlscript summit is a two day event  consisting of various learning sessions alongside fun filled activities and so on..
The major aim behind this summit is to eradicate  gender inequality and empower women.
Some of the glimpse of the summit include:-\n\n
1. Various technical session by the industry experts.\n\n
2. Providing a platform to students to interact with the MNC\'s.\n\n
3. Showcasing the work- environment of the MNC.\n\n
4. Fun thrilled competition and many more.\n\n
5.Calling the best performs of our Code for freedom campaign to share their motivational ideas and rewarding them.\n\n
6.Calling successful programmers , women etc. To share their views and success stories.\n\n
7.Collecting Resume/CV of college students to match them with an internship.\n\n
8.Witnessing a live world record.\n</string>
    <string name="parti_short">Attend the Girlscript\'s 1st India Summit 2K17 at Ahmedabad!</string>
    <string name="volun_short">Become a Volunteer and contribute to India\'s 1st Women-oriented fest!</string>
    <string name="women_short">Be a part of World Record! Come and join with us! (Only for women)</string>
    <string name="participant">This is an Invite only event, this registration does not confirm your seats. After the application deadline, you will receive a confirmation mail from our side</string>
    <string name="volunteer_q1">Team you want to be a part of :</string>
    <string name="whatapp_no">Whatsapp number :</string>
    <string name="graphic_designing">Graphic Designing</string>
    <string name="event_management">Event Management</string>
    <string name="content_writing">Content Writing</string>
    <string name="social_media_marketing">Social media Marketing</string>
    <string name="hospitality_and_management">Hospitality and Management</string>
    <string name="your_past_experience">Your Past Experience :</string>
    <string name="do_you_need_travel_allowance">Do you need Travel allowance ?</string>
    <string name="do_you_need_accomodation">Do you need Accommodation ?</string>
    <string name="title_activity_twentyone">TwentyoneActivity</string>
    <string name="twentyone">If you are under age of 21 and achieved something great, then nominate yourself!</string>
    <string name="name_of_the_nominator">Name of The Nominator :</string>
    <string name="name_of_the_nominee">Name of The Nominee :</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="select_date">Select Date</string>
    <string name="achievements_till_2017">Tell us about your achievements till 2017 :</string>
    <string name="proud_of">One thing which you have done this year, which you are proud of :</string>
    <string name="getting_a_21">How getting a 21 Under 21 Award will help you in your life?</string>
    <string name="drop_links_to_your_social_media_profiles_here">Drop links to your social media profiles here :</string>
    <string name="please_include_the_names_of_2_people_their_contact_details_as_a_reference_for_this_award">Please include the names of 2 people, their contact details as a reference for this award</string>
    <string name="presence">Will you be able to join us in Ahemdabad to receive your award?</string>
    <string name="like_to_speak">Would you like to speak in our event. If you would like to speak then on what you would be talking about?</string>
    <string name="message_to_youth">What is your opinion on Young India and their current situation?</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="women_info">Be a part of World Record! Come and join us! (Only for women)</string>
    <string name="women_html">Do you know HTML?</string>
    <string name="other_things">What all other things do you know?</string>
    <string name="women_in_tech">How is to be a women in technology in India?</string>
    <string name="do_you_need_any_kind_of_stipend">Do you need any kind of stipend?</string>
    <string name="practice_before_event">Will you be able to come for attending any practice session/meeting before event?</string>
    <string name="action_contactus">Contact us</string>
    <string name="home">Home</string>
    <string name="registration">Registration</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="our_team">Our Team</string>
    <string name="rate_us">Rate us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="about_us_gs">\tGirlScript is a non-profit organization and a community that empowers women and introduces them to the various opportunities available in the tech industry. We establish GirlScript Chapters in different colleges and universities and help them via online and offline training. GirlScript Foundation is registered as a non-profit organization under section-8 of companies act and was founded on 12th of February, 2017.\n\n We believe in ‘Equality in Tech’ rather than just ‘Women in Tech’. We encourage everyone to participate in our events irrespective of age, profession, gender etc.Our main aim is to promote the idea of programming and technology within tier-two and tier-three cities of India.\n\n We have just started in February 2017 with an aim to change Indian Education System of rote learning and marks based system. We are always looking for leaders who share common thoughts and have different technical and non-technical skills, to support our organization. Within two months of launching our project, we were able to establish GirlScript Chapters in three different cities of India and get more than a thousand followers on different social media platforms.\n\n GirlScript has been selected by Mozilla for Open Leadership Training 2017 and we strive to make GirlScript a biggest online and offline platform for sharing ideas as well as opportunities.\n\n</string>
    <string name="india_summit">GirlScript Summit</string>
    <string name="title_activity_apply">ApplyActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="your_name">Your Name :</string>
    <string name="emailid">Email ID :</string>
    <string name="subject">Subject :</string>
    <string name="message">Message :</string>
    <string name="submit">Submit</string>
    <string name="select_gmail">Please select the \"Gmail\" App !</string>
    <string name="spread_a_word">Spread a Word</string>
    <string name="logout">Logout</string>

</resources>
