<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TwentyoneActivity"
    tools:showIn="@layout/activity_twentyone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_the_nominator"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNominator"
            android:layout_weight="1"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_the_nominee"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNominee"
            android:layout_weight="1"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textSize="18sp"
            android:layout_weight="0"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:background="@drawable/ripple_btnreg"
            android:textColor="@android:color/white"
            android:layout_margin="20dp"
            android:id="@+id/btnSetDate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCity21"
            android:layout_weight="1"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobiile_no"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtMob"
            android:layout_weight="1"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtMail"
            android:layout_weight="1"
            android:inputType="textEmailAddress" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/achievements_till_2017"
            android:textSize="18sp"
            android:layout_weight="0"/>

        <EditText
            android:id="@+id/txtAchieve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textMultiLine|textLongMessage" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proud_of"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtProudyear"
            android:inputType="textMultiLine|textLongMessage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getting_a_21"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtGet21"
            android:inputType="textMultiLine|textLongMessage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drop_links_to_your_social_media_profiles_here"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSociallinks"
            android:inputType="textMultiLine|textLongMessage"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_include_the_names_of_2_people_their_contact_details_as_a_reference_for_this_award"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtReference"
            android:inputType="textMultiLine|textLongMessage"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presence"
            android:textSize="18sp"
            android:layout_weight="0"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgTwentyone"
            android:layout_margin="10dp">
            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="rbClicktwenty"
                android:id="@+id/rdbtnYespresence"
                android:text="@string/yes"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="rbClicktwenty"
                android:id="@+id/rdbtnNopresence"
                android:text="@string/no"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_to_speak"
            android:textSize="18sp"
            android:layout_weight="0"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/txtSpeak"
                android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_to_youth"
            android:textSize="18sp"
            android:layout_weight="0"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textLongMessage"
            android:id="@+id/txtMessagetoYouth"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_btnreg"
            android:id="@+id/btnApplytwenty"
            android:text="@string/apply"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
