<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.prafulmishra.indiasummit.ParticipantActivity"
    tools:showIn="@layout/activity_participant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtName"
            android:layout_weight="1"
            android:inputType="textPersonName" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="18sp"
        android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCity"
            android:layout_weight="1"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/college_organization"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCol_org"
            android:layout_weight="1"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobiile_no"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtMob"
            android:layout_weight="1"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtMail"
            android:layout_weight="1"
            android:inputType="textEmailAddress" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_prtpnt"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtExpect"
            android:layout_weight="1"
            android:inputType="textMultiLine|text" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2_prtpnt"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEvent"
            android:layout_weight="1"
            android:inputType="textMultiLine|text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tech_skills"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rtTech"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/colorPrimaryDark"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leadership_skills"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rtLead"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitude"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtAltitude"
            android:layout_weight="1"
            android:inputType="textMultiLine|text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/will_you_join"
            android:textSize="18sp"
            android:layout_weight="0"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:id="@+id/rdGroup"
            android:gravity="center">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/rbtnYes"
                android:layout_weight="1"
                android:layout_margin="2dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maybe"
                android:layout_weight="1"
                android:layout_margin="2dp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_weight="1"
                android:layout_margin="2dp"/>
        </RadioGroup>

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/ripple_btnreg"
           android:id="@+id/btnApply"
           android:text="@string/apply"
           android:textSize="20sp"
           android:layout_margin="10dp"
           android:elevation="10dp"
           android:textColor="@android:color/white"/>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
